--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.103",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-typing-effect": "^2.0.5",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.21.0",
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-katex": "^3.0.4"
   }
 }
